--- a/plugins/Makefile
+++ b/plugins/Makefile
@@ -18,11 +18,13 @@ standalone:
 
 lv2:
 	$(MAKE) -C 3BandEQ/LV2
+	$(MAKE) -C 3BandSplitter/LV2
 	$(MAKE) -C PingPongPan/LV2
 	$(MAKE) -C StereoAudioGain/LV2
 
 vst:
 	$(MAKE) -C 3BandEQ/VST
+	$(MAKE) -C 3BandSplitter/VST
 	$(MAKE) -C PingPongPan/VST
 	$(MAKE) -C JackAss/VST
 
@@ -33,11 +35,13 @@ clean:
 
 	# LV2
 	$(MAKE) clean -C 3BandEQ/LV2
+	$(MAKE) clean -C 3BandSplitter/LV2
 	$(MAKE) clean -C PingPongPan/LV2
 	$(MAKE) clean -C StereoAudioGain/LV2
 
 	# VST
 	$(MAKE) clean -C 3BandEQ/VST
+	$(MAKE) clean -C 3BandSplitter/VST
 	$(MAKE) clean -C PingPongPan/VST
 	$(MAKE) clean -C JackAss/VST
 
