--- a/libs/juce-2.0/source/extras/audio plugin demo/Builds/VisualStudio2008/JuceDemoPlugin.vcproj
+++ b/libs/juce-2.0/source/extras/audio plugin demo/Builds/VisualStudio2008/JuceDemoPlugin.vcproj
@@ -1003,6 +1003,7 @@
             </FileConfiguration>
           </File>
           <File RelativePath="..\..\..\..\modules\juce_audio_utils\gui\juce_AudioThumbnail.h"/>
+          <File RelativePath="..\..\..\..\modules\juce_audio_utils\gui\juce_AudioThumbnailBase.h"/>
           <File RelativePath="..\..\..\..\modules\juce_audio_utils\gui\juce_AudioThumbnailCache.cpp">
             <FileConfiguration Name="Debug|Win32"
                                ExcludedFromBuild="true">
